# Encoder-App

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/encoder/: validate_file.h
include/utilities/: file_management.h  parse_arguments.h  resolve_path.h
src/: main.cpp
src/encoder/: validate_file.cpp
src/utilities/: file_management.cpp  parse_arguments.cpp  resolve_path.cpp
